# agenticssdlc

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CHEATSHEET.md  LICENSE  README.md  chainlit.md  docker-compose.yml  pyproject.toml  requirements.txt
.agent/config/: settings.json
.agent/protocols/: protocols_anti_patterns.md  protocols_cli.md  protocols_communication.md  protocols_core_laws.md  protocols_evaluation.md  protocols_mode_matrix.md  protocols_observability.md  protocols_phase_gate.md  protocols_quality.md  protocols_references.md  protocols_timing.md  protocols_tools.md
.agent/resources/: resources_implementation_plan.md  resources_task_template.md
.agent/roles/: roles_architect.md  roles_engineer.md  roles_librarian.md  roles_manager.md  roles_protocol.md  roles_reflector.md  roles_validator.md
.agent/rules/: rules_boundaries.md  rules_stack.md  rules_style.md  rules_workflow_manager.md
.agent/shards/: shards_architecture.md  shards_claude_haiku_4.md  shards_claude_opus_4.md  shards_claude_sonnet_4.md  shards_gemini_3_flash.md  shards_gemini_3_pro.md  shards_gemini_ultra.md  shards_generic_llm.md
.agent/skills/: index.json
.chainlit/: config.toml
.chainlit/translations/: en-US.json
.github/workflows/: ci-cd.yml
observability/grafana/: agentics-sdlc-dashboard.json
platform/docker/: Dockerfile.api  Dockerfile.ui
platform/sql/: init.sql
platform/terraform/: backend.tf  main.tf  outputs.tf  variables.tf
public/css/: stylesheet.css
public/js/: init.js
scripts/: grafana_verify_live_panels.sh  scripts_bootstrap.sh  scripts_rag.py  scripts_validation.sh
src/: __init__.py
src/agents/: __init__.py  agents_architect.py  agents_base.py  agents_engineer.py  agents_librarian.py  agents_manager.py  agents_protocol.py  agents_protocol_sections.py  agents_reflector.py  agents_utils.py  agents_validator.py
src/analytics/: __init__.py  analytics_bigquery_ingest.py  analytics_scheduled_queries.sql  analytics_supabase_ingest.py  analytics_utils.py
src/api/: __init__.py  api_utils.py  main.py
src/core/: __init__.py  core_config.py  core_heartbeat.py  core_llm.py  core_logging.py  core_remote_write.py  core_remote_write_heartbeat.py  core_tracing.py  core_utils.py
src/rag/: __init__.py  rag_embeddings.py  rag_ingestion.py  rag_retriever.py  rag_utils.py  rag_vector_store.py
src/storage/: __init__.py  storage_gcs.py  storage_utils.py
src/tuning/: __init__.py  tuning_config.py  tuning_evaluate.py  tuning_generator.py  tuning_train.py  tuning_utils.py
src/ui/: __init__.py  ui_chainlit_app.py  ui_chainlit_formatters.py  ui_chainlit_utils.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  conftest.py  test_api_endpoints.py
(+104 files in other folders)
